# ComfyUI-GIS

./: .gitignore  AUTHORS.md  CITATION.cff  NOTICE  README.md  __init__.py  pyproject.toml  requirements.txt
comfyui_gis/: __init__.py
comfyui_gis/core/: README.md  __init__.py  vector_info.py  vector_preview.py
comfyui_gis/nodes/: __init__.py  project_status.py  vector_inspect.py  vector_preview.py
example_workflows/: README.md
tests/: README.md
